--- a/Changes
+++ b/Changes
@@ -124,10 +124,10 @@
 
 0.79     2017-01-08
 
-- Replaced DROLSKY::CheckChangesHasContent plugin with
+- Replaced ATOOMIC::CheckChangesHasContent plugin with
   EnsureChangesHasContent.
 
-- Replaced DROLSKY::VersionProvider with VersionFromMainModule.
+- Replaced ATOOMIC::VersionProvider with VersionFromMainModule.
 
 - Improved some POD generation code and the POD which is generated.
 
@@ -365,7 +365,7 @@
 
 0.40 2015-11-24
 
-- Added a new plugin, DROLSKY::Git::CheckFor::CorrectBranch. This plugin only
+- Added a new plugin, ATOOMIC::Git::CheckFor::CorrectBranch. This plugin only
   checks that the branch is correct on non-TRIAL releases.
 
 
@@ -468,7 +468,7 @@
 
 0.22     2014-11-02
 
-- The DROLSKY::Contributors plugin now leaves existing .mailmap and weaver.ini
+- The ATOOMIC::Contributors plugin now leaves existing .mailmap and weaver.ini
   files alone.
 
 - Exclude plugins shipped with this bundle when checking for stale modules.
